# m4.2_inspire_to_arc

./: .env.integration.enc  .gitattributes  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  README.md  experiment_arctable.py  inspect_arctrl.py  pyproject.toml
.agents/skills/config-wrapper/: SKILL.md
.devcontainer/: devcontainer.json
.devcontainer/antigravity/: devcontainer.json
.devcontainer/vscode/: devcontainer.json
.github/workflows/: docker-build.yml  docker-release.yml  feature-pull-request.yml  feature-release.yml  pre-release.yml  python-quality.yml  release.yml  reusable-build.yml  reusable-check.yml  reusable-code-quality.yml  reusable-release.yml
dev_environment/: FAIRagro.sql  README.md  client.crt  client.key  compose.yaml  config.local.yaml  config.yaml  demo_api_main.py  start.sh  stop.sh
docker/: Dockerfile.inspire_to_arc  Dockerfile.sql_to_arc
docker/container-structure-tests/: inspire_to_arc.yaml  sql_to_arc.yaml
docs/: ARCHITECTURAL_DESIGN.md  README.md  create_empty_views.sql  sql_to_arc_database_views.md
middleware/api_client/: README.md
middleware/api_client/tests/unit/: test_client.py
middleware/harvester/: pyproject.toml
middleware/harvester/spec/configuration/: design.md  spec.md
middleware/harvester/spec/harvester-orchestration/: design.md  spec.md
middleware/harvester/src/middleware/harvester/: config.py  main.py
middleware/harvester/tests/unit/: test_config.py
middleware/inspire/src/middleware/inspire/: config.py  csw_client.py  errors.py  mapper.py  plugin.py
middleware/inspire/tests/unit/: test_harvester_comprehensive.py  test_mapper_comprehensive.py  test_plugin.py
middleware/inspire_to_arc/: README.md  __init__.py  config_sample.yaml  implementation_plan.md  pyproject.toml
middleware/inspire_to_arc/src/middleware/inspire_to_arc/: config.py  errors.py  harvester.py  main.py  mapper.py  plugin.py
middleware/inspire_to_arc/tests/integration/: conftest.py  test_harvester_integration.py
middleware/inspire_to_arc/tests/unit/: test_harvester.py  test_harvester_comprehensive.py  test_inspire_mapper.py  test_mapper.py  test_mapper_comprehensive.py  test_plugin.py
middleware/shared/src/middleware/shared/config/: config_base.py  config_wrapper.py
middleware/sql_to_arc/: README.md  config.example.yaml  pyproject.toml
middleware/sql_to_arc/src/middleware/sql_to_arc/: config.py  main.py  mapper.py
middleware/sql_to_arc/tests/integration/: test_workflow.py
middleware/sql_to_arc/tests/unit/: test_coverage.py  test_main.py  test_populate.py  test_sql_mapper.py  test_sql_to_arc_config.py
scripts/: load-env.sh  quality-fix.sh  run-container-structure-test.sh  run-mypy.sh  setup-git-lfs.sh
scripts/git-hooks/: post-checkout  post-commit  post-merge  pre-push
