[project]
name = "inspire_to_arc"
version = "0.1.0"
description = "Harvester for INSPIRE metadata to ARC conversion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "owslib>=0.31.0",
    "arctrl>=1.0.0",
    "pydantic>=2.0.0",
    "api_client",
]

[tool.uv.sources]
api_client = { workspace = true }
