[project]
name = "sql_to_arc"
dynamic = ["version"]
description = "The FAIRagro advanced middleware SQL-to-ARC converter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arctrl>=3.0.0b15",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "shared>=0.0.1",
    "api_client>=0.0.1",
    "opentelemetry-api>=1.39.1",
]

[tool.uv.sources]
api_client = { git = "https://github.com/fairagro/m4.2_advanced_middleware_api.git", branch = "main", subdirectory = "middleware/api_client" }
shared = { git = "https://github.com/fairagro/m4.2_advanced_middleware_api.git", branch = "main", subdirectory = "middleware/shared" }

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
